# CS160

./: .gitignore  README.md
assignments/as1/: assoc.ml  patina_arith.ml  patina_let.ml  patina_ref.ml
assignments/as2/interpreter/: patina-darwin  patina-linux
assignments/as2/tests/: public_test1.pt  public_test10.pt  public_test11.pt  public_test12.pt  public_test13.pt  public_test15.pt  public_test16.pt  public_test2.pt  public_test3.pt  public_test4.pt  public_test5.pt  public_test6.pt  public_test7.pt  public_test8.pt  public_test9.pt
assignments/as3/as3tests/: invalid10.pt  invalid13.pt  invalid16.pt  invalid17.pt  invalid20.pt  invalid21.pt  invalid22.pt  invalid26.pt  invalid27.pt  invalid3.pt  invalid31.pt  invalid34.pt  invalid35.pt  invalid36.pt  (+16 more)
assignments/as4/: arch.ml  compile.ml
assignments/hw1/: README.md  dune-project  hw1.opam
assignments/hw1/lib/: dune  hw1.ml  hw1_sig.ml  tree.ml
assignments/hw1/test/: README.md  dune  hw1_test.ml  test_lib.ml
assignments/hw2/: README.md  dune  utils.ml
assignments/hw2/test/: dune  examples.ml  test_calculator.ml  test_graph.ml  test_regex.ml  tests.ml
assignments/hw3/: README.md
assignments/hw3/part1/: dune  language.ml  mylexer.ml  myparser.ml  test_lexer.ml  test_parser.ml  tests.ml  utils.ml
assignments/hw3/part1/regex/: alphabet.ml  dune  sem_reference.ml  sig.mli  syntax.ml
assignments/hw4/: Makefile  README.md  ast.ml  dune  error.ml  parser.mly  patina.ml  scanner.mll  typecheck.ml
assignments/hw5/: README.md  ast.ml  astlib.ml  compile.ml  dune  error.ml  patina.ml  patinac  runtime.c  scanner.mll  typecheck.ml
assignments/hw5/examples/: evenodd.ml  evenodd.pt  fact.ml  fact.pt  fact_imp.ml  fact_imp.pt  fib.ml  fib.pt  fib2.ml  fib2.pt  gcd.ml  gcd.pt  gcd2.ml  gcd2.pt  gcd3.ml  gcd3.pt  test.ml  test0.ml  test0.pt  test1.ml  test1.pt  test10.ml  test10.pt  test11.ml  test11.pt  test12.ml  test12.pt  test13.ml  test13.pt  test14.ml  test14.pt  test15.ml  test15.pt  test16.ml  test16.pt  test17.ml  test17.pt  test18.ml  test18.pt  test19.ml  (+17 more)
assignments/hw5/ll/: dune  ll.ml  llutil.ml
homework/hw1/: proj1.ml
sections/sec01/: ex1.ml  ex1_holes.ml  sec1.org
sections/sec02/: README.md  README.org  diagrams.org  ex1.ml  ex1_holes.ml  section-02-no-solution.ipynb  section-02.ipynb  section-02.ml
sections/sec04/: README.md  README.org  ast.ml  dune  error.ml  parser.mly  scanner.mll  sec04.md  section04.ml  stack.ml
sections/sec08/: README.md
sections/section9/: composition.tikz  if-then-else.tikz  section9.org  while.tikz
(+149 files in other folders)
